<?xml version="1.0"?>
<package>
  <name>me495_hw3</name>
  <version>1.0.0</version>
  <description>The me495_hw3 package</description>
  <maintainer email="jarvis@todo.todo">jarvis</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>turtlesim</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>turtlesim</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
